# grapp

./: .Dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  bank-dash.py  charts.py  create_installer.sh  dash_layout.py  dash_layouts.py  demo.py  energy.py  example.py  grapp.py  load.py  main.py  meta.json  preprocess.py  pyproject.toml  schema.py  settings.py  test-maia.json  test-maia.py  utils.py
.github/workflows/: ci.yml  codeql-analysis.yml
assets/: custom.js  dashExtensions_default.js  finalcss.css  my-script.js  sample.xls  style.css
content/en/: grapp-1.md  grapp.md
db/: __init__.py  load.py  mongodb.py  mysqldb.py
documentation/: README.md  nuxt.config.js  package.json  tailwind.config.js
documentation/content/: settings.json
documentation/content/en/: index.md  setup.md
documentation/content/fr/: setup.md
documentation/static/admin/: config.yml  index.html
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
mongodb/: app.py
static/: bank.html  sample.xls
