[tool.poetry]
name = "grapp"
version = "0.1.0"
description = "Create graphs on the go"
authors = ["Mexson Fernandes <mexson.fernandes@preflet.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "^1.20.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
pre-commit = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
